Fix touch on mobile

--- a/src/scss/_faq.scss
+++ b/src/scss/_faq.scss
@@ -27,6 +27,7 @@
 
   .faqHeader {
     padding: .75rem 1.25rem;
+    cursor: pointer;
   }
 
   .alert {
